# NeuroVault

./: ALPHA_INSTRUCTIONS.md  API_REFERENCE.md  BACKEND_GUIDE.md  README.md  run_neurovault.py  setup_project.py
backend/: .env  README.md  debug_llm_date.txt  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: README.md  auditor.py  base.py  messenger.py
backend/app/api/: README.md  chat.py  image.py  notes.py  summary.py  upload.py  voice.py
backend/app/core/: llm.py  prompts.py
backend/app/models/: base.py
backend/app/schemas/: README.md  note.py  timeline.py
backend/app/services/: README.md  image_generation_service.py  multimodal_service.py  note_service.py  summary_service.py  vector_service.py  voice_service.py
backend/db/: database.py
backend/tests/: conftest.py  test_agenda_logic.py  test_calendar_logic.py  test_notes_api.py
frontend/: README.md  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/: AgentChatModal.tsx  CalendarView.tsx  ImageGen.tsx  NoteCard.tsx  NoteInput.tsx  README.md  RollingSummary.tsx  Settings.tsx  ThinkingSpace.tsx  Timeline.tsx  TodoList.tsx  VoiceAgent.tsx  VoiceSearchModal.tsx
frontend/src/components/__tests__/: NoteCard.test.tsx  NoteInput.test.tsx
frontend/src/stores/: noteStore.ts  settingsStore.ts
voice_engine/: README.md  convert_voices.py  debug_kokoro.py  requirements.txt  server.py
